--- a/index.html
+++ b/index.html
@@ -1,11 +1,268 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>starwest</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+	<div class="container">
+		<div class="header">
+			<div class="logo">
+				<img class="logo-img" src="img/CORRECT LOGO.png">
+				<img class="center-logo" src="img/INGREDIENTS DIVISION.png">
+			</div>
+			<div class="search-box">
+				<div class="search-header">
+					<h5>Starwest Sites</h5>
+				</div>
+				<div class="search-box-navbar">
+					<nav>
+						<a href="">Ingredients</a>
+						<a href="">Retail</a>
+						<a href="" class="last_item">Wholesale</a>
+					</nav>
+				</div>
+				<div class="search-bar">
+					<form class="example" action="action_page.php">
+						<input type="text" placeholder="Search Products" class="search">
+						<button type="submit">GO
+						</button>
+					</form>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="topnav" id="myTopnav">
+			<a href="#" class="active">Home</a>
+			<a href="#">About Us</a>
+			<a href="#"> Quality Assurance</a>
+			<a href="#">Sustainability</a>
+			<a href="#">Contact Us</a>
+			<a href="#" id="phone-no"><span>Ph: 1-888-273-4372</span></a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i>
+			</a>
+		</div>
+		<!-- <nav class="navbar-menu topnav" id="myTopnav">
+			<a href="#"> Home</a>
+			<a href="#"> About Us</a>
+			<a href="#"> Quality Assurance</a>
+			<a href="#">Sustainability</a>
+			<a href="#">Contact Us</a>
+
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i>
+			</a>
+
+		</nav> -->
+		<div class="main-landing-page">
+			<div class="product-info-div">
+				<div class="products-list">
+					<div class="product-header">
+						<div class="header-div">
+							<h4>PRODUCTS</h4>
+
+						</div>
+						<ul>
+							<li>-Botanicals</li>
+							<li>-Organic Botanicals</li>
+							<li>-Spices</li>
+							<li>-Organic Spices</li>
+							<li>-Spice Blends</li>
+							<li>-Teas</li>
+							<li>-Other Products</li>
+							<li>
+								<div class="download-button">
+									<p class="download-para1">DOWNLOADS</p>
+									<p class="download-para2">Product lists, Brochures & More
+									</p>
+								</div>
+								<div>
+									<img src="img/Adobe_PDF copy.png" class="pdf-img">
+								</div>
+							</li>
+						</ul>
+
+					</div>
+
+				</div>
+				<div class="assistance">
+					<h2>Need <span class="capital-class">A</span>ssistance?</h2>
+
+					<h2 class="call">CALL: 1-888-800-4372</h2>
+				</div>
+				<div class="update">
+					<div class="update-header-div">
+						<h4>GET <span class="capital-class">U</span>PDATE</h4>
+
+					</div>
+					<div class="update-info-details">
+						<p>Get automatic update on you certification</p>
+						<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+						<label for="vehicle1">Organic Update </label><br>
+						<input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+						<label for="vehicle2"> Kosher Update</label><br>
+
+						<input type="text" id="fname" placeholder="Name">
+						<input type="text" id="fname" placeholder="Email Address">
+						<button class="button">SIGN UP</button>
+						<div class="logo-div">
+
+							<img src="img/qai logo copy.png">
+							<img src="img/kosher logo copy.png">
+
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<div class="info-discription-div">
+				<div class="slider">
+					<img src="img/Layer 67.png">
+					<div class="slider-discription">
+						<h2>
+							Premium igredient supplier of <span class="bold-letter">Botanicals</span> <span
+								class="bold-letter">Herbs</span> and <span class="bold-letter">Spices</span>
+						</h2>
+					</div>
+					<div class="slider-bar">
+						<img src="img/Arrow - Left.png"> <span class="one">1 </span>
+						<span><b>2</b></span>
+						<span class="three"> 3</span>
+						<img src="img/Arrow - right.png">
+
+					</div>
+				</div>
+				<div class="starwest-info">
+					<div class="starwest-details">
+						<h3> Starwest Botanica,Inc</h3>
+						<ul>
+							<li><span class="main-content">
+									Manufacture & processor, with an emphasis on certified organic Ingredient.
+								</span>
+							</li>
+							<li><span class="main-content">
+									Supplies quantites form 25 pound to full cantainer.
+								</span>
+							</li>
+							<li><span class="main-content">
+									Complete milling, blending & formulating services
+								</span>
+							</li>
+							<li><span class="main-content">Modern In-house Quality Control Laboratory, providing
+									efficient microbiology, heavy
+									metal & identity testing.
+								</span></li>
+							<li><span class="main-content">cGMP- & FDA-comliant manufacturing protocols are followed.
+
+								</span></li>
+							<li>
+								<span class="main-content">
+									Specification sheet, certificates of Analysis, Material Safty Data sheets & other
+									documents are procided
+
+							</li>
+							<li><span class="main-content">
+									82,000 sq. ft,warehouse enable us to maintain a sizeble prodduct inventory &
+									maintain
+									adequate stock levels.
+								</span>
+							</li>
+						</ul>
+					</div>
+					<div class="news-cerifications">
+						<div class="letest-news">
+							<div class="letest-news-header-div">
+								<h4>LATEST <span class="capital-class">N</span>EWS</h4>
+
+							</div>
+							<div class="letest-news-details">
+								<p>And thus have these naked Nantuketers, these sea hermits, issuing from blah...<a>Read
+										More</a></p>
+								<p> " How have you bewitched them?" asked tare tarkas one afternoon, when.. <a href="#">
+										Read More</a></p>
+							</div>
+						</div>
+						<div class="certificates">
+							<div class="letest-news-header-div">
+								<h4>CERTIFICATIONS</h4>
+
+							</div>
+							<ul>
+								<li>- 2009 AIB Audit Report</li>
+								<li>- Organic System Plan</li>
+								<li>- Organic Ceritificate of compliance</li>
+								<li>- Kosher certification</li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+		<div class="footer">
+			<div class="footer-logo">
+				<img class="logo-img" src="img/CORRECT LOGO.png">
+			</div>
+
+			<div class="products">
+				<p class="footer-subheadings">products</p>
+				<p>Botanicals</p>
+				<p>Organic Botanicals</p>
+				<p>Spices</p>
+				<p>oragnic spices</p>
+			</div>
+			<div class="info">
+				<p class="footer-subheadings">info</p>
+				<p>About Us</p>
+				<p>contact us</p>
+				<p>certificates</p>
+				<p>services</p>
+			</div>
+			<div class="Starwest-site">
+				<p class="footer-subheadings">Starwest site</p>
+				<p>ingredient</p>
+				<p>retails</p>
+				<p>wholesale</p>
+
+			</div>
+			<div class="links">
+				<p class="footer-subheadings">links</p>
+				<p>disclaimer</p>
+				<p>privacy</p>
+
+
+			</div>
+			<div class="all-rights">
+				<p>
+					2010 starwestHerb.com all rights reserved.
+				</p>
+
+			</div>
+
+		</div>
+	</div>
+
+	<script>
+		function myFunction() {
+			var x = document.getElementById("myTopnav");
+			if (x.className === "topnav") {
+				x.className += " responsive";
+			} else {
+				x.className = "topnav";
+			}
+		}
+	</script>
+
+
+
 </body>
+
 </html>
